welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: too many arguments for method estSurBiscuit: ()Boolean
if (estSurBiscuit(true)){
                 ^RunHalf:12: error: too many arguments for method estSurOrange: ()Boolean
if(estSurOrange(true)){
               ^